# project-2_Veber_-25-555

./: .gitignore  README.md  db_meta.json  pyproject.toml
data/: products.json
src/primitive_db/: core.py  decorators.py  demo.cast  engine.py  main.py  utils.py
src/primitive_db/data/: products.json  users.json
